# srm_1d

./: .gitignore  CLAUDE.md  README.md  bates_adapt.py  chunctest.py  conftest.py  gemini summary.md  generic agent instructions.md  machbusterNew.ric  pyproject.toml
examples/: Aeroblast_flight_2.py  BALLSstick.py  ISP_Super_Loki.py  ZeroxOptimizer.py  Zerox_test.py  __init__.py  bates_4seg.py  cross_motor_frozen_vs_effective.py  cross_motor_lhs.py  cross_motor_lhs_v075.py  grid_diagnostic.py  hasegawa_a_frozen_vs_effective.py  hasegawa_a_lhs.py  hasegawa_a_lhs_effective.py  hasegawa_a_lhs_mode_transport_2x2.py  hasegawa_motor_a.py  hasegawa_motor_a_aft_basket.py  hasegawa_motor_a_frozentest.py  ignition_spike_diagnostic.py  l3035_test.py  machbusterNew.py  run_75_5120ChaseRed_BATES.py  run_76_8000FatBoy_Monolithic_ForwardFinocyl_Aft_Conical.py  run_BALLSstick.py  run_L3035.py  run_chunc.py  run_chunc_frozen.py  run_hlbl38.py  run_hlbltest.py  run_ivanO25k.py  run_l1843.py  run_machFAIL.py  run_pathfin54.py  run_pathfin54st2_0.py  run_template.py  tapered_finocyl.py  zerox.py  zerox_a_sweep.py  zerox_diagnostic.py  zerox_erosion_sweep.py  (+2 more)
motors/: 76_8000FatBoy_Monolithic_ForwardFinocyl_Aft_Conical.ric  BALLSstick.ric  ISP_Super_Loki.ric  L1843.ric  L3035.ric  M1378 Geo Test.ric  example_bates.ric  hasegawa_a.transport.yaml  hasegawa_b.ric  hasegawa_c.ric  hlbltest.ric  machbusterFAIL.ric  machbusterNew.frozen.transport.yaml  zerox.frozen.transport.yaml
srm_1d/: ARCHITECTURE.md  BATES Test.ric  DEVNOTES.md  README.md  __init__.py  burn_rate.py  channels.py  fmm_grain.py  (+12 more)
(+232 files in other folders)
